src/objects/AMSTATCORP__Account_Aircraft_Relation__c.object
<CustomObject>
    <fields>
        <fullName>AMSTATCORP__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Aircraft Relation</relationshipLabel>
        <relationshipName>Account_Aircraft_Relation2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMSTATCORP__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Operator</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Fractional Program Provider</fullName>
                </value>
                <value>
                    <fullName>Fractional Share</fullName>
                </value>
                <value>
                    <fullName>Fractional</fullName>
                </value>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Hangar Physical</fullName>
                </value>
                <value>
                    <fullName>Hangar Mailing</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft</label>
        <referenceTo>AMSTAT_Aircraft__c</referenceTo>
        <relationshipLabel>Account Aircraft Relations</relationshipLabel>
        <relationshipName>Account_Aircraft_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Aircraft Relation</label>
    <nameField>
        <displayFormat>AAR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Aircraft Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>